# mosquitto_lua_acl

./: .gitignore  CMakeLists.txt  Makefile  README  lua_acl.c  lua_acl.h  lua_acl.h.in  mosquitto_plugin.h
lua/: CMakeLists.txt
test/: mqtt.conf  template.lua  test.lua
